@@ -1,3 +1,8 @@
+2002-01-12   Xavier Ordoquy  <MCArkan@gael.sourceforge.net>
+
+	* moduleinfo.py: added gnome-common to gnome-mime-data
+	and libgtop to gnome-core.
+
 Fri Jan 11 12:08:14 2002  Owen Taylor  <otaylor@redhat.com>
 
 	* moduleinfo.py (head): gtkhtml2 now depends on gail, not
